# color-image-classifier

./: CMakeLists.txt  Dockerfile  README.md  color_moments.cpp  color_moments.h  core.cpp  core.h  entrypoint.sh  main.cpp  phash.cpp  phash.h  utils.cpp  utils.h
src/: main.cpp
src/core/: core.cpp  core.h
src/cv_methods/color_moments/: color_moments.cpp  color_moments.h
src/cv_methods/sift/: sift.cpp  sift.h
src/metrics/: metrics.cpp  metrics.h
src/utils/: utils.cpp  utils.h
